--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>Work for money and design for love!</p>
                 <p>I'm Ravish, an UI/UX designer and developer based in India.</p>
                 <button type="button">
-                    <a href="documents/Resume.pdf" download>Download Resume</a>
+                    <a href="image/profile.jpg" download>Download Resume</a>
                 </button>
             </div>
             <img src="image/profile.jpg" alt="" height="416px">
