Added phone number

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dev-ravish.github.io/Portfolio_2.0.github.io/">
+    <meta property="og:title" content="Portfolio | Ravish Kumar | IITM">
+    <meta property="og:description" content="Hey, I am Ravish Kumar from IIT Madras B.Tech Chemical Branch. My Quali... Click on the link to know more about me.">
+    <meta property="og:image" content="https://bit.ly/3l5ggzN">
+    
     <title>Ravish Kumar</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="portfolio.css">
@@ -150,6 +155,7 @@
     </main>
     <footer id="footer">
         <p>&copy;2021 Ravish Kumar</p>
+        <a href="tel:9142940445">+91 9142940445</a>
         <p>Made with <span>&hearts;</span> in INDIA</p>
     </footer>
 
