adding card image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="https://dev-ravish.github.io/Portfolio_2.0.github.io/">
     <meta property="og:title" content="Portfolio | Ravish Kumar | IITM">
     <meta property="og:description" content="Hey, I am Ravish Kumar from IIT Madras B.Tech Chemical Branch. My Quali... Click on the link to know more about me.">
-    <meta property="og:image" content="https://bit.ly/3l5ggzN">
+    <meta property="og:image" content="https://dev-ravish.github.io/Portfolio_2.0.github.io/image/profile.jpg">
     
     <title>Ravish Kumar</title>
     <link rel="stylesheet" href="normalize.css">
